general idea of some of the functions

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <div class="column is-four-fifths mr-4">
       <!-- Current Weather -->
-      <div class="tile is-parent notification is-primary is-flex is-flex-direction-column m-1">
+      <div class="tile is-parent notification is-info is-flex is-flex-direction-column is-outlined m-1">
         <h3>Tuscany (05-15-1774)<p>icon</p></h3> <!-- City name + date -->
         <p>Temp = 56degf</p> <!-- temp -->
         <p>Wind = 330mph</p> <!-- wind -->
@@ -90,7 +90,6 @@
             <p>Humidity = 67%</p> <!-- humidity -->
           </div>  
         </div>
-        
       </div>  
     </div>  
   </main>
