save and load functions made. recently searched buttons generated and diplay weather data when clicked

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
       <!-- End Search -->
 
       <!-- Recent Searches -->
-      <div id="recent-searches" class="tile is-child is-flex is-flex-direction-column">
-        <!-- Recent Searches Loaded Data -->
-      </div>
+      <div class="tile is-child is-flex is-flex-direction-column">
+        <h2 class="is-flex is-justify-content-center">Recently Searched</h2>
+          <div id="recent-searches" class="tile is-child is-flex is-flex-direction-column">
+            <!-- Recent Searches Loaded Data -->
+          </div>
+        </div>
       <!-- End Recent Searches -->
 
     </div>
